[DSC-1864] post alignment fixes

--- a/src/app/shared/auth-nav-menu/user-menu/user-menu.component.scss
+++ b/src/app/shared/auth-nav-menu/user-menu/user-menu.component.scss
@@ -12,9 +12,8 @@
 
         a.ds-menu-item {
           display: block;
-          color: var(--ds-expandable-navbar-link-color);
+          color: var(--ds-user-menu-dropdown-link-color);
           &:hover {
-            color: var(--ds-expandable-navbar-link-color-hover);
             background-color: var(--ds-user-menu-dropdown-link-background-hover);
           }
         }
